--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   pip: true
 
 install:
+- sudo apt-get update && sudo apt-get install -y texlive-full latexmk
 - npm install -g netlify-cli
 - export PATH="$(npm prefix -g)/bin:$PATH"
 - pip install -r requirements.txt
