pre-commit: Do not look for spelling issues in SVG files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
   - id: codespell
     name: "Check for spelling mistakes"
     args: ["--ignore-words", ".codespellignore"]
-    exclude: ^source/locale/.*$
+    exclude: ^(.*\.svg|source/locale/.*)$
 - repo: https://github.com/psf/black
   rev: stable
   hooks:
